# compressed_sensing

./: .gitignore  hola.py  pyproject.toml
compressed_sensing/geometry/: __init__.py  conic.py  ellipse.py  exceptions.py  line.py  line_segment.py  point.py  rectangle.py
compressed_sensing/geometry/utils/: __init__.py  utils.py
compressed_sensing/scenes/: aspect_ratio.py  lagrange.py  rotation.py  secant.py  shift.py  solution.py  tangency.py  tangents.py  transforms.py
notebooks/: matrices.ipynb
