[tool.poetry]
name = "compressed-sensing"
version = "0.1.0"
description = "Educational repo oriented to showcasing how compressed sensing works"
authors = ["Iñaki Rabanillo <lanza241@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
manimgl = "^1.6.1"
numpy = "1.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
